--- a/Login/app/src/main/AndroidManifest.xml
+++ b/Login/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginPage">
-        <activity android:name=".homepage"></activity>
+        <activity android:name=".accountpage"></activity>
+        <activity android:name=".messegepage" />
+        <activity android:name=".likespage" />
+        <activity android:name=".homepage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
